Blender stuck on default scene if some other app takes focus after double clicking file in Finder #66722

Closed
opened 2019-07-11 22:51:11 +02:00 by Volodymyr · 58 comments

System Information
Operating system: Mac OS Sierra 10.12.6, Mac OS Mojave 10.14.4, Mac OS Catalina 10.5.1
Graphics card: Intel HD 6000

Blender Version
Broken: (example: 2.80 release, 2.81 release, 2.82a release), 2.83 beta (27 May), 2.90 b84c380aaa

Short description of error
If you double click a .blend file in Finder, and do nothing afterwards, blender will take focus, show splash screen + the cube scene for a moment and then show the contents of the file you wanted to open.

But if you steal focus from Blender before it launches (and give it to Finder) using the steps given below, if never moves past the default scene.

Exact steps for others to reproduce the error

  • Make sure no Blender process is open.
  • Open Finder, double click on a Blend file, AND immediately click in Finder toolbar, or sidebar or icon in the Dock to make sure Finder has the focus.
  • Blender appears in dock, takes focus, shows the UI but is stuck on splash screen.

Since this doesn't happen if

  • you launch blender from terminal with file path argument then steal focus.
  • OR you keep a window open from a debugger and then double click open a file and steal focus.
    , I couldn't get the logs. So you'd have to try it yourself.

Video: https://www.youtube.com/watch?v=EzWcYr915o8&feature=youtu.be

**System Information** Operating system: Mac OS Sierra 10.12.6, Mac OS Mojave 10.14.4, Mac OS Catalina 10.5.1 Graphics card: Intel HD 6000 **Blender Version** Broken: (example: 2.80 release, 2.81 release, 2.82a release), 2.83 beta (27 May), 2.90 b84c380aaa **Short description of error** If you double click a .blend file in Finder, and do nothing afterwards, blender will take focus, show splash screen + the cube scene for a moment and then show the contents of the file you wanted to open. But if you *steal* focus from Blender before it launches (and give it to Finder) using the steps given below, if never moves past the default scene. **Exact steps for others to reproduce the error** - Make sure no Blender process is open. - Open Finder, double click on a Blend file, AND immediately click in Finder toolbar, or sidebar or icon in the Dock to make sure Finder has the focus. - Blender appears in dock, takes focus, shows the UI but is stuck on splash screen. Since this doesn't happen if - you launch blender from terminal with file path argument then steal focus. - OR you keep a window open from a debugger and then double click open a file and steal focus. , I couldn't get the logs. So you'd have to try it yourself. Video: https://www.youtube.com/watch?v=EzWcYr915o8&feature=youtu.be
Author

Added subscriber: @linosia

Added subscriber: @linosia

#71501 was marked as duplicate of this issue

#71501 was marked as duplicate of this issue

Added subscribers: @WilliamReynish, @Sergey, @ZedDB

Added subscribers: @WilliamReynish, @Sergey, @ZedDB

@WilliamReynish @Sergey can you guys reproduce this?

@WilliamReynish @Sergey can you guys reproduce this?

I am a bit confused here. What is "scene in file" ?
Opening Blender from finder without providing any file is supposed to open default startup setup for that Blender version (will be factory settings first time, or your saved startup if you import it from previous Blender or save it again in a newer version).

If you are using RC1 dmg bundle consider re-downloading it. We had an issue with signature in the original version which is now fixed.

I am a bit confused here. What is "scene in file" ? Opening Blender from finder without providing any file is supposed to open default startup setup for that Blender version (will be factory settings first time, or your saved startup if you import it from previous Blender or save it again in a newer version). If you are using RC1 dmg bundle consider re-downloading it. We had an issue with signature in the original version which is now fixed.
Author

No, it’s not that
What i mean that it doesn’t open blender file. It starts blender with default scene, but not opening file.
If blender is already launched — yes, it loads file. But if blender is quit, and then you tries to open blender file from finder — it just launches blender with default scene

No, it’s not that What i mean that it doesn’t open blender file. It starts blender with default scene, but not opening file. If blender is already launched — yes, it loads file. But if blender is quit, and then you tries to open blender file from finder — it just launches blender with default scene

By opening Blender from Finder, what of the following you mean:

  • Going to the Applications folder, and starting Blender from there?
  • Opening .blend file, which is supposed to start Blender and open the file of choice in it?
By opening Blender from Finder, what of the following you mean: - Going to the Applications folder, and starting Blender from there? - Opening .blend file, which is supposed to start Blender and open the file of choice in it?
Author

I mean opening .blend file from finder.

I mean opening .blend file from finder.
Author

I can record video tomorrow (today I can’t) to show exactly what i mean

I can record video tomorrow (today I can’t) to show exactly what i mean

Added subscriber: @ArtoKitula

Added subscriber: @ArtoKitula

Think i understand what you mean now.

Unfortunately, i can not reproduce the issue. Tried RC1 DMG and buildbot's ZIP.
Maybe @WilliamReynish or @ArtoKitula will be more lucky here.

Think i understand what you mean now. Unfortunately, i can not reproduce the issue. Tried RC1 DMG and buildbot's ZIP. Maybe @WilliamReynish or @ArtoKitula will be more lucky here.
Author

Strangely, I cannot reproduce it either (with July 2 build or recent RC1)
I didn't make it up (I have no reason to do so :)
But it is strange...

Close this topic, if the issue comes back, I will create a new thread with video that time :)

Thank you, guys!

Strangely, I cannot reproduce it either (with July 2 build or recent RC1) I didn't make it up (I have no reason to do so :) But it is strange... Close this topic, if the issue comes back, I will create a new thread with video that time :) Thank you, guys!
Author

Well, this bug happens 1 out of 10 times, but it's really unpredictable and hard to catch...
You may open 20 .blend files fine, and then open other .blend file and this happens....

Well, this bug happens 1 out of 10 times, but it's really unpredictable and hard to catch... You may open 20 .blend files fine, and then open other .blend file and this happens....
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
[Video of the bug ](https://www.youtube.com/watch?v=EzWcYr915o8&feature=youtu.be)
Author

Bug_in_pictures.jpg

![Bug_in_pictures.jpg](https://archive.blender.org/developer/F8048193/Bug_in_pictures.jpg)

Added subscriber: @MaciejJutrzenka

Added subscriber: @MaciejJutrzenka

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Maciej Jutrzenka self-assigned this 2019-11-26 17:14:53 +01:00

probably fixed plz check if it happens in official 2.81 version if yes make new bug report

probably fixed plz check if it happens in official 2.81 version if yes make new bug report
Author

Why closing this task before I've checked it? I could do that (closing issue) myself then if everything fine...
Also, I added in info version that I've tested with video: 2.81 beta 2019-11-11

Why closing this task before I've checked it? I could do that (closing issue) myself then if everything fine... Also, I added in info version that I've tested with video: 2.81 beta 2019-11-11
Author

And nope — it STILL present.
I am encountering this bug almost every time I open .blend file...

And nope — it STILL present. I am encountering this bug almost every time I open .blend file...

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Added subscriber: @rjg

Added subscriber: @rjg

@MaciejJutrzenka Please stop closing issues, just because it might be fixed in 2.81. Take a look at the Blender Bug Triaging Playbook.

@MaciejJutrzenka Please stop closing issues, just because it *might* be fixed in 2.81. Take a look at the [Blender Bug Triaging Playbook](https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook).

We can't reproduce this on our side still.

I'm not doubting that you have this issue, but until we can reproduce this on our side, there is not much we can do.

We can't reproduce this on our side still. I'm not doubting that you have this issue, but until we can reproduce this on our side, there is not much we can do.
Maciej Jutrzenka was unassigned by Sebastian Parborg 2019-11-26 18:22:30 +01:00

@rjg i couldn't reproduce it i allways check. before closeing is the bug valid. i couldn't find tracker that fixed it that is why i closed it with such post. the bug report was very old.

@rjg i couldn't reproduce it i allways check. before closeing is the bug valid. i couldn't find tracker that fixed it that is why i closed it with such post. the bug report was very old.
Author

Sebastian Parborg (zeddb) reopened this task as Open.

Phew, thanks. Closed new duplicate :)

>Sebastian Parborg (zeddb) reopened this task as Open. Phew, thanks. Closed new duplicate :)
Author

but until we can reproduce this on our side, there is not much we can do.

(Obviously) I will wait as much as needed. If you need some info (with steps how to gather it) I can give it :)

>but until we can reproduce this on our side, there is not much we can do. (Obviously) I will wait as much as needed. If you need some info (with steps how to gather it) I can give it :)

hmm the longer i think about this maybe this is MAC system related stuff? do you have maybe some strict permissions?

hmm the longer i think about this maybe this is MAC system related stuff? do you have maybe some strict permissions?
Author

do you have maybe some strict permissions?

I didn't modified Mac OS files, System Integrity Protection is enabled (never was disabled).
I have Gatekeeper disabled though, but that couldn't be a problem...

Or you mean something else?

>do you have maybe some strict permissions? I didn't modified Mac OS files, System Integrity Protection is enabled (never was disabled). I have Gatekeeper disabled though, but that couldn't be a problem... Or you mean something else?
Author

I will download blender 2.79 to test it again...

I will download blender 2.79 to test it again...
Author

Downloaded and tested with Blender 2.79 — same bug as with 2.80 and 2.81...
This IS strange, because on 2.79 I didn't encountered it before I tried 2.80 beta...

This indeed could be OS-related, but reinstalling OS right now is probably not an option for me...

Downloaded and tested with Blender 2.79 — same bug as with 2.80 and 2.81... This IS strange, because on 2.79 I didn't encountered it before I tried 2.80 beta... This indeed could be OS-related, but reinstalling OS right now is probably not an option for me...

u okey with closeing this bug then? as it seams really OS related stuff.

u okey with closeing this bug then? as it seams really OS related stuff.
Author

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Author

Would NOT put it in archive though...

Would NOT put it in archive though...
Author

Any suggestions what I can do with my OS except clean install?
(I know it's not forum for help, but there is always a probability someone like me still can encounter such bug...)

Any suggestions what I can do with my OS except clean install? (I know it's not forum for help, but there is always a probability someone like me still can encounter such bug...)

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

We do not close bugs just because they are specific to one operating system.

We do not close bugs just because they are specific to one operating system.
Author

Sorry, didn't know that.
I can test this bug as long as you will ask me.

Sorry, didn't know that. I can test this bug as long as you will ask me.

The following text if off-topic for the actual bug report but relevant for the process of triaging on the bug tracker.

@MaciejJutrzenka Good to hear that you tried to reproduce this first, that wasn't clear from your original comment. Some bugs are difficult to reproduce though, since they are specific to an operating system, hardware or driver version. Just because it doesn't occur on your system doesn't mean that the bug is nonexistent.

If the bug report is incomplete and cannot be reproduced by you and other users, the creator of the report cannot provide additional information that allow to reproduce it (upon request) and the report has been inactive for more than 7 days, then you may close it as Archived (Update: Invalid is the correct status, since the tracker curfew ). If you close a ticket please give a reason*why// it was closed, otherwise it's needlessly frustrating for the user that created the report. Stating that it may be fixed in 2.81 is not a good reason (since it may as well contain the same bug). You can ask them to test it with the most recent version and close the ticket if the issue doesn't occur for them anymore.

I know that English is not the first language of many users on this platform, but please try to write proper sentences and avoid (internet) slang, (e.g. plz, u, lack of capitalization and punctuation). This helps with the readability and looks a bit more professional.

If you have questions about the triaging process on the bug tracker feel free to ask questions on DevTalk . I hope we can see valuable contribution from you in the future.

*The following text if off-topic for the actual bug report but relevant for the process of triaging on the bug tracker.* @MaciejJutrzenka Good to hear that you tried to reproduce this first, that wasn't clear from your original comment. Some bugs are difficult to reproduce though, since they are specific to an operating system, hardware or driver version. Just because it doesn't occur on your system doesn't mean that the bug is nonexistent. If the bug report is incomplete and cannot be reproduced by you and other users, the creator of the report cannot provide additional information that allow to reproduce it (upon request) and the report has been inactive for more than 7 days, then you may close it as ~~*Archived*~~ (Update: *Invalid* is the correct status, since the [tracker curfew ](https:*code.blender.org/2019/12/tracker-curfew/)). If you close a ticket please give a reason*why// it was closed, otherwise it's needlessly frustrating for the user that created the report. Stating that it may be fixed in 2.81 is not a good reason (since it may as well contain the same bug). You can ask them to test it with the most recent version and close the ticket if the issue doesn't occur for them anymore. I know that English is not the first language of many users on this platform, but please try to write proper sentences and avoid (internet) slang, (e.g. *plz*, *u*, lack of capitalization and punctuation). This helps with the readability and looks a bit more professional. If you have questions about the triaging process on the bug tracker feel free to ask questions on [DevTalk ](https://devtalk.blender.org/c/blender). I hope we can see valuable contribution from you in the future.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

@linosia, do you still see this issue?

@linosia, do you still see this issue?
Author

Yes, still present with current 2.81.
Happens 2 out of 10 times, mostly when Mac is restarted (so NO blender.app loaded...).
When Right-Click-Mouse and choose "open with" -- it loads correctly with proper scene.
But after restarting OS and just clicking on file in finder (no "open with") -- it still loads default scene...

Yes, still present with current 2.81. Happens 2 out of 10 times, mostly when Mac is restarted (so NO blender.app loaded...). When Right-Click-Mouse and choose "open with" -- it loads correctly with proper scene. But after restarting OS and just clicking on file in finder (no "open with") -- it still loads default scene...
Author

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Added subscriber: @EitanSomething

Added subscriber: @EitanSomething
Member

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'
Member

Is this still an issue with 2.83

Is this still an issue with 2.83
Author

Yes
And it is still annoying (especially when opening multiple .blend's)

Yes And it is still annoying (especially when opening multiple .blend's)
Author

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Changed status from 'Needs Developer To Reproduce' to: 'Needs Triage'

Changed status from 'Needs Developer To Reproduce' to: 'Needs Triage'
Ankit Meel changed title from 2.8 Starts with default scene instead of actually opening file on MacOS to Blender stuck on default scene if some other app takes focus after double clicking file in Finder 2020-05-04 09:32:45 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

Added subscriber: @cleveroctopus

Added subscriber: @cleveroctopus

Hello. I've been using Blender for about 6 months now on Ubuntu. The OS just pushed some updates and now I am having the same issue as described, but a little worse maybe. If I double click on a .blend file it always opens to the default cube scene and does not get past it. I can however choose my .blend file from the splash screen or through the open menu and it will load the project. This unfortunately prevents me from using mikeykal's rendering script to do multi-core rendering becuase the same problem happens when opening a .blend file through the command line. What info do you need from me to help get this fixed? Single core rendering is painfully slow.

Hello. I've been using Blender for about 6 months now on Ubuntu. The OS just pushed some updates and now I am having the same issue as described, but a little worse maybe. If I double click on a .blend file it always opens to the default cube scene and does not get past it. I can however choose my .blend file from the splash screen or through the open menu and it will load the project. This unfortunately prevents me from using mikeykal's rendering script to do multi-core rendering becuase the same problem happens when opening a .blend file through the command line. What info do you need from me to help get this fixed? Single core rendering is painfully slow.
Member

@cleveroctopus that seems more similar to #77443 (Ubuntu: Opening .blend files opens a new file) & its duplicate blender/blender-addons#77467 (Blend Files open as default Startup Splash Menu.)
This one is macOS specific.

@cleveroctopus that seems more similar to #77443 (Ubuntu: Opening .blend files opens a new file) & its duplicate blender/blender-addons#77467 (Blend Files open as default Startup Splash Menu.) This one is macOS specific.

Yes, #77443 is exactly the behavior I'm seeing. I would somewhat argue that the two behaviors are so similar that it is probably the same cause. At any rate, should I make another post in #77443?

Yes, #77443 is exactly the behavior I'm seeing. I would somewhat argue that the two behaviors are so similar that it is probably the same cause. At any rate, should I make another post in #77443?
Philipp Oeser removed the
Interest
User Interface
label 2023-02-10 09:25:32 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-13 07:18:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66722
No description provided.